Added authentication-service routes #6

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,11 @@ server.port=9191
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #ACTUATOR
 management.endpoints.web.exposure.include=*
-##ROUTE USER-SERVICE
+#ROUTE USER-SERVICE
 spring.cloud.gateway.routes[0].id=user-service
 spring.cloud.gateway.routes[0].uri=lb://user-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/users/**
+#ROUTE AUTHENTICATION-SERVICE
+spring.cloud.gateway.routes[1].id=authentication-service
+spring.cloud.gateway.routes[1].uri=lb://authentication-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/login/**
